--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@ body {
 .login {
     height: 100vh;
     width: 100vw;
-    background-image: url("https://wallpapercave.com/uwp/uwp3633986.webp");
-    background-size: contain;
+    background-image: url("https://tse3.mm.bing.net/th/id/OIP.b7CrLYrqO5ROf7JcWWENBgHaEo?cb=iwp2&w=2560&h=1600&rs=1&pid=ImgDetMain");
+    background-size: cover;
     display: grid;
     place-items: center;
 }
@@ -87,10 +87,15 @@ body {
     background-color: green;
 }
 
-@media (max-width:800px) {
+@media (max-width:650px) {
     :root {
         --hight: 80%;
         --width: 30%;
         --log-SFS: 15px;
+    }
+
+    .login {
+        background-image: url("https://wallpapercave.com/uwp/uwp3633986.webp");
+        background-size: 100vw 100vh;
     }
 }
