--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ a {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
 }
 
@@ -34,8 +34,8 @@ body {
     width: 100vw;
     background-image: url("https://tse3.mm.bing.net/th/id/OIP.b7CrLYrqO5ROf7JcWWENBgHaEo?cb=iwp2&w=2560&h=1600&rs=1&pid=ImgDetMain");
     background-size: cover;
-    display: grid;
-    place-items: center;
+    place-content: center;
+    justify-items: center;
 }
 
 .frist {
@@ -89,13 +89,13 @@ body {
 
 @media (max-width:650px) {
     :root {
-        --hight: 80%;
-        --width: 30%;
+        --hight: 85%;
+        --width: 25%;
         --log-SFS: 15px;
     }
 
     .login {
         background-image: url("https://wallpapercave.com/uwp/uwp3633986.webp");
         background-size: 100vw 100vh;
-    }
+    } 
 }
