--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ a {
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
 }
 
@@ -96,6 +96,6 @@ body {
 
     .login {
         background-image: url("https://wallpapercave.com/uwp/uwp3633986.webp");
-        background-size: 100vw 100vh;
-    } 
+        background-size: 100vw 90vh;
+    }
 }
