--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 .main2 {
     width: 100%;
     height: 100vh;
-    background-color: green;
+    background-color: pink;
 }
 
 @media (max-width:650px) {
